--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,12 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // websocket
+    implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    // OpenAPI 서드파티 라이브러리 ( 2023.04.15 기준 0.12.0이 최신버전 )
+    implementation 'com.theokanning.openai-gpt3-java:service:0.12.0'
 }
 
 tasks.named('test') {
